// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile should assert an invalid rule value 1`] = `
Array [
  Object {
    "message": "Invalid type for color",
  },
]
`;

exports[`compile should assert an invalid sheet 1`] = `
Object {
  "default": Object {
    "b765dfa68": Object {
      "children": "",
      "key": "backgroundColor",
      "keyId": "bb7c5a6d0",
      "media": undefined,
      "value": "yellow",
    },
    "cb34cd11f": Object {
      "children": "",
      "key": "color",
      "keyId": "c3d7e6258",
      "media": undefined,
      "value": "red",
    },
  },
}
`;

exports[`compile should assert an invalid sheet 2`] = `
Array [
  Object {
    "message": "Classname with key foo is not an object",
  },
]
`;

exports[`compile should assert invalid pseudo classes 1`] = `
Array [
  Object {
    "message": "&:iAmAnInvalidPseudoClass is an invalid CSS pseudo class / element",
  },
  Object {
    "message": "Invalid type for color",
  },
]
`;

exports[`compile should report multiple errors 1`] = `
Array [
  Object {
    "message": "Classname with key foo is not an object",
  },
  Object {
    "message": "&:iAmAnInvalidPseudoClass is an invalid CSS pseudo class / element",
  },
  Object {
    "message": "Invalid type for color",
  },
]
`;
